objects/API_Log__c.object
<CustomObject>
    <description>It will capture API logs while call out to external environments</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>API Logs</relationshipLabel>
        <relationshipName>API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_out_end_point__c</fullName>
        <label>Call out end point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Call_out_type__c</fullName>
        <description>Determines whether its a inbound out bound call out.</description>
        <label>Call out type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <description>It will be used to capture work flow ID while Zuora call out</description>
        <label>Process ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>It will capture API request</description>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <inlineHelpText>Response code received from external app</inlineHelpText>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed with time out</fullName>
                </value>
                <value>
                    <fullName>Failed with errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>API Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Call_out_end_point__c</columns>
        <columns>Call_out_type__c</columns>
        <columns>Request__c</columns>
        <columns>Response__c</columns>
        <columns>Response_Code__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>API-{000000}</displayFormat>
        <label>API Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>